# fallout-se

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: web-pages.yml
crates/fallout_cli/: Cargo.toml
crates/fallout_cli/src/: main.rs
crates/fallout_cli/tests/: cli_debug.rs  cli_fields.rs
crates/fallout_core/: Cargo.toml
crates/fallout_core/src/: gender.rs  layout.rs  lib.rs  object.rs
crates/fallout_core/src/common/: blob_emission.rs  blob_patching.rs  layout_management.rs  mod.rs
crates/fallout_core/src/core_api/: engine.rs  item_catalog.rs  mod.rs  trait_catalog.rs  types.rs  well_known_items.rs
crates/fallout_core/src/fallout1/: mod.rs  sections.rs  types.rs
crates/fallout_core/src/fallout2/: header.rs  mod.rs  object.rs  sections.rs  types.rs
crates/fallout_core/tests/: core_api.rs  corpus_roundtrip.rs  document_roundtrip.rs  fallout1_parse.rs  fallout2_parse.rs  gender.rs
crates/fallout_gui/: Cargo.toml
crates/fallout_gui/src/: main.rs
crates/fallout_render/: Cargo.toml
crates/fallout_render/src/: lib.rs
crates/fallout_render/tests/: render_output.rs
crates/fallout_tui/: Cargo.toml
crates/fallout_tui/src/: main.rs
crates/fallout_web/: Cargo.toml  editor.html  editor.js  index.html  index.js
crates/fallout_web/src/: lib.rs
src/: lib.rs  main.rs  reader.rs
src/core_api/: engine.rs  error.rs  mod.rs  types.rs
src/fallout1/: header.rs  mod.rs  types.rs
src/fallout2/: mod.rs  object.rs  sections.rs
tests/: cli_fields.rs  core_api.rs  document_roundtrip.rs  fallout1_parse.rs  fallout2_parse.rs  gender.rs
tests/fallout1_examples/SAVEGAME/SLOT01/: AUTOMAP.SAV  BROHDENT.SAV  CHILDRN1.SAV  HUBENT.SAV  JUNKKILL.SAV  LAADYTUM.SAV  LABLADES.SAV  LAGUNRUN.SAV  MBENT.SAV  VAULT13.SAV  VAULTNEC.SAV
tests/fallout1_examples/SAVEGAME/SLOT02/: AUTOMAP.SAV  BROHD12.SAV  BROHDENT.SAV  HALLDED.SAV  HUBDWNTN.SAV  HUBENT.SAV  LAADYTUM.SAV  LAFOLLWR.SAV  MBENT.SAV  MSTRLR12.SAV  V13ENT.SAV  VAULT13.SAV  WATRSHD.SAV
tests/fallout1_examples/SAVEGAME/SLOT03/: AUTOMAP.SAV  HUBDWNTN.SAV  HUBENT.SAV  HUBOLDTN.SAV  HUBWATER.SAV  MSTRLR12.SAV  RAIDERS.SAV  SHADYE.SAV  SHADYW.SAV  V13ENT.SAV  VAULT13.SAV  WATRSHD.SAV
tests/fallout1_examples/SAVEGAME/SLOT04/: AUTOMAP.SAV  BROHD34.SAV  CHILDRN1.SAV  HOTEL.SAV  HUBWATER.SAV  MBENT.SAV  MBSTRG12.SAV  MSTRLR12.SAV
tests/fallout1_examples/SAVEGAME/SLOT05/: AUTOMAP.SAV  BROHD12.SAV  BROHD34.SAV  BROHDENT.SAV  CHILDRN1.SAV  JUNKCSNO.SAV  JUNKENT.SAV  LABLADES.SAV  MBENT.SAV  MBSTRG12.SAV  MBVATS12.SAV  MSTRLR34.SAV  SHADYW.SAV  V13ENT.SAV  VAULT13.SAV  VAULTBUR.SAV  VAULTENT.SAV
tests/fallout1_examples/SAVEGAME/SLOT06/: AUTOMAP.SAV  CAVES.SAV  GLOW1.SAV  HUBOLDTN.SAV  LARIPPER.SAV  MSTRLR34.SAV  VAULT13.SAV
tests/fallout1_examples/SAVEGAME/SLOT07/: AUTOMAP.SAV  CHILDRN2.SAV  GLOW2.SAV  GLOWENT.SAV  MSTRLR12.SAV  MSTRLR34.SAV  RAIDERS.SAV  SHADYE.SAV
tests/fallout1_text/: Claire92.TXT  Clairey.TXT  Clairey2.TXT  Clairey4.TXT  Clairey5.TXT  Clairey6.TXT  Clairey7.TXT  Clairey8.TXT  Clairey9.TXT  ClaireyA.TXT  ClaireyB.TXT  ClaireyC.TXT  ClaireyD.TXT  ClaireyE.TXT  ClaireyF.TXT
tests/fallout2_examples/: slotdat.ini
tests/fallout2_examples/SLOT01/: ARCAVES.SAV  ARTEMPLE.SAV  AUTOMAP.SAV  sfalldb.sav
tests/fallout2_examples/SLOT01/proto/critters/: 00000079.pro  00000089.pro
tests/fallout2_examples/SLOT02/: ARTEMPLE.SAV  AUTOMAP.SAV  sfallgv.sav
tests/fallout2_examples/SLOT02/proto/critters/: 00000107.pro  00000502.pro
tests/fallout2_text/: Jimbo.TXT
