[workspace]
members = [
    "crates/fallout_core",
    "crates/fallout_render",
    "crates/fallout_cli",
    "crates/fallout_tui",
    "crates/fallout_gui",
    "crates/fallout_web",
]
default-members = ["crates/fallout_core", "crates/fallout_cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Ali Raheem"]
repository = "https://github.com/ali-raheem/fallout-se"
license = "MIT OR Apache-2.0"
