[package]
name = "fallout-se"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Command-line interface for Fallout save parsing"

[[bin]]
name = "fallout-se"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fallout_core = { package = "fallout-se-core", path = "../fallout_core" }
serde_json = "1"
