[package]
name = "fallout-se"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Command-line interface for Fallout save parsing"

[[bin]]
name = "fallout-se"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fallout_core = { package = "fallout-se-core", version = "0.1.3", path = "../fallout_core" }
fallout_render = { package = "fallout-se-render", version = "0.1.3", path = "../fallout_render" }
serde_json = "1"
