[package]
name = "fallout-se-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core save parsing/query library for Fallout 1 & 2"

[lib]
name = "fallout_core"

[dependencies]
flate2 = "1.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
