[package]
name = "fallout-se-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Native GUI shell for Fallout save editor"

[dependencies]
fallout_core = { package = "fallout-se-core", version = "0.1.3", path = "../fallout_core" }
