[package]
name = "fallout-se-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Static web frontend for Fallout save rendering"

[lib]
name = "fallout_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
fallout_core = { package = "fallout-se-core", version = "0.1.4", path = "../fallout_core" }
fallout_render = { package = "fallout-se-render", version = "0.1.4", path = "../fallout_render" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
